crates/macro/ui-tests/closure-variance.stderr
error[E0277]: the trait bound `i32: UpcastFrom<Number>` is not satisfied
 --> ui-tests/closure-variance.rs:7:51
  |
7 |     let _bad: &Closure<dyn Fn() -> i32> = closure.upcast_ref();
  |                                                   ^^^^^^^^^^ the trait `UpcastFrom<Number>` is not implemented for `i32`
  |
  = help: the following other types implement trait `UpcastFrom<S>`:
            `i32` implements `UpcastFrom<i16>`
            `i32` implements `UpcastFrom<i32>`
            `i32` implements `UpcastFrom<i8>`
  = note: required for `dyn Fn() -> i32` to implement `UpcastFrom<dyn Fn() -> Number>`
  = note: 1 redundant requirement hidden
  = note: required for `ScopedClosure<'_, dyn Fn() -> i32>` to implement `UpcastFrom<ScopedClosure<'_, dyn Fn() -> Number>>`
  = note: required for `ScopedClosure<'_, dyn Fn() -> Number>` to implement `wasm_bindgen::prelude::Upcast<ScopedClosure<'_, dyn Fn() -> i32>>`

error[E0277]: the trait bound `i32: UpcastFrom<Number>` is not satisfied
  --> ui-tests/closure-variance.rs:11:52
   |
11 |     let _bad2: &Closure<dyn Fn(Number)> = closure2.upcast_ref();
   |                                                    ^^^^^^^^^^ the trait `UpcastFrom<Number>` is not implemented for `i32`
   |
   = help: the following other types implement trait `UpcastFrom<S>`:
             `i32` implements `UpcastFrom<i16>`
             `i32` implements `UpcastFrom<i32>`
             `i32` implements `UpcastFrom<i8>`
   = note: required for `dyn Fn(Number)` to implement `UpcastFrom<dyn Fn(i32)>`
   = note: 1 redundant requirement hidden
   = note: required for `ScopedClosure<'_, dyn Fn(Number)>` to implement `UpcastFrom<ScopedClosure<'_, dyn Fn(i32)>>`
   = note: required for `ScopedClosure<'_, dyn Fn(i32)>` to implement `wasm_bindgen::prelude::Upcast<ScopedClosure<'_, dyn Fn(Number)>>`
